# pitweb

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
pitweb/: api.py  delivery_trip.py  hooks.py  modules.txt  patches.txt  webshop.py  website_item_sync.py
pitweb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pitweb/config/: pitweb.py
pitweb/doctype/pit_webshop_settings/: pit_webshop_settings.json  pit_webshop_settings.py
pitweb/patches/post_model_sync/: fix_pit_webshop_settings_module.py
pitweb/patches/v15_0/: add_delivery_stop_compat_fields.py  sync_existing_website_item_images.py
pitweb/pitweb/config/: desktop.py
pitweb/pitweb/custom/: item.json  item_barcode.json
pitweb/pitweb/doctype/pit_webshop_settings/: pit_webshop_settings.json
pitweb/pitweb/workspace/pit_web/: pit_web.json
pitweb/public/css/: pitweb_web.css  related_products.css
pitweb/public/js/: pitweb_web.js  related_products.js
pitweb/workspace/pit_web/: pit_web.json
