[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pitweb"
version = "0.0.1"
description = "Custom ERPNext app for Pitweb"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pitweb", email = "admin@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pitweb*"]
